# blind-watermark-wasm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json  test.mjs  tsconfig.json
.github/workflows/: ci.yml  publish.yml
docs/: index.html
lib/: index.ts
script/: copy-wasm-to-dist.mjs  robustness_bench.cpp  run_bench.sh  run_verify.sh  smoke-pack.sh  smoke-test.mjs  verify_core.cpp
src/: blind_watermark_ffi.cpp  color_convert.cpp  color_convert.hpp  dct.cpp  dct.hpp  dwt.cpp  dwt.hpp  image_io.cpp  image_io.hpp  wasm_bindings.cpp  watermark_core.cpp  watermark_core.hpp
